--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ set(CMAKE_CUDA_STANDARD 17)
 
 add_subdirectory(Libraries/)
 add_subdirectory(src/)
+
+# SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}" )
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr")
