--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,19 +2,11 @@ file(GLOB_RECURSE CUDA_SOURCES "*.cu")
 file(GLOB_RECURSE CUDA_HEADERS "*.cuh")
 
 file(GLOB_RECURSE CPP_SOURCES "*.cpp")
-file(GLOB_RECURSE CPP_SOURCES "*.hpp")
+file(GLOB_RECURSE CPP_HEADERS "*.hpp")
 
 include(CMakePrintHelpers)
-cmake_print_variables(CUDA_SOURCES)
+cmake_print_variables(CPP_SOURCES)
 
-
-
-# add_library(srcs STATIC
-#     ${CUDA_HEADERS}
-#     ${CPP_HEADERS}
-#     ${CUDA_SOURCES}
-#     ${CPP_SOURCES}
-# )
 
 add_executable(Simulation_server ${CUDA_SOURCES} ${CPP_SOURCES} ${CUDA_HEADERS} ${CPP_HEADERS})
 
@@ -35,4 +27,4 @@ target_link_libraries(
 # set_target_properties(Simulation_server PROPERTIES POSITION_INDEPENDENT_CODE ON)
 set_target_properties(Simulation_server PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
-target_compile_options(Simulation_server PRIVATE --expt-relaxed-constexpr)
+#target_compile_options(Simulation_server PRIVATE --expt-relaxed-constexpr)
