Kompiluje się, ale nie uruchamia

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(mp11 INTERFACE)
 target_include_directories(mp11 INTERFACE include/)
 
-add_library(glad INTERFACE)
-target_include_directories(glad INTERFACE include/)
+add_library(glad STATIC lib/glad.c)
+target_include_directories(glad PUBLIC include/)
 
 add_library(GLFW OBJECT lib/glfw3.lib)
 target_include_directories(GLFW INTERFACE include/)
