--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -7,6 +7,9 @@ target_include_directories(glad PUBLIC include/)
 add_library(GLFW OBJECT lib/glfw3.lib)
 target_include_directories(GLFW INTERFACE include/)
 
+# set(BUILD_STATIC_LIBS ON)
+# add_subdirectory(include/glm/)
+
 add_library(glm INTERFACE)
 target_include_directories(glm INTERFACE include/)
 
