--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,9 @@ file(GLOB_RECURSE CUDA_HEADERS "*.cuh")
 file(GLOB_RECURSE CPP_SOURCES "*.cpp")
 file(GLOB_RECURSE CPP_HEADERS "*.hpp")
 
-include(CMakePrintHelpers)
-cmake_print_variables(CPP_SOURCES)
-
+add_definitions( -DWINDOW_RENDER)
 
 add_executable(Simulation_server ${CUDA_SOURCES} ${CPP_SOURCES} ${CUDA_HEADERS} ${CPP_HEADERS})
-
-# include_directories(${PROJECT_SOURCE_DIR}src/)
 
 target_link_libraries(
     Simulation_server
@@ -18,14 +14,13 @@ target_link_libraries(
     mp11
     glad
     GLFW
-    glm
     KHR
     ${PROJECT_SOURCE_DIR}/Libraries/lib/libglfw3.a
+    ${OPENGL_LIBRARIES}
 )
 
-# target_compile_features(Simulation_server PUBLIC cxx_std_17)
+target_include_directories(Simulation_server PRIVATE ${OPENGL_INCLUDE_DIRS})
 
-# set_target_properties(Simulation_server PROPERTIES POSITION_INDEPENDENT_CODE ON)
+target_compile_options(Simulation_server PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
+
 set_target_properties(Simulation_server PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-
-#target_compile_options(Simulation_server PRIVATE --expt-relaxed-constexpr)
