--- a/Simulation Server.vcxproj
+++ b/Simulation Server.vcxproj
@@ -427,7 +427,7 @@
     <ClInclude Include="src\config\blood_cells_definition.hpp" />
     <ClInclude Include="src\config\blood_cell_presets.hpp" />
     <ClInclude Include="src\config\graphics.hpp" />
-    <ClInclude Include="src\config\physics.hpp" />
+    <ClInclude Include="src\config\physics.cuh" />
     <ClInclude Include="src\config\simulation.hpp" />
     <ClInclude Include="src\config\vein_definition.hpp" />
     <ClInclude Include="src\graphics\camera.hpp" />
