Add sample test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,3 +122,19 @@ target_link_libraries(Simulation_server ${LIBS})
 # Copy directory with shaders
 #
 file(COPY Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+#
+# Tests
+#
+add_subdirectory("Libraries/googletest-1.14.0/")
+
+include(CTest)
+
+if (BUILD_TESTING)
+    add_executable(my_test tests/sample_test.cpp)
+    target_link_libraries(my_test PRIVATE GTest::gtest_main)
+
+    include(GoogleTest)
+    # Finds all the Google tests associated with the executable
+    gtest_discover_tests(my_test)
+endif()
