Add cuda sample test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,5 +126,6 @@ file(COPY Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 #
 # Tests
 #
+include(CTest)
 add_subdirectory("${PROJECT_SOURCE_DIR}/Libraries/googletest-1.14.0/")
 add_subdirectory("tests/")
